Fix testimonial alignment

--- a/wp-content/themes/divi-ncruralcenter/css/style.css
+++ b/wp-content/themes/divi-ncruralcenter/css/style.css
@@ -57,7 +57,12 @@ h2.category-title {
 
 .et_pb_testimonial {
   background: #EFEFEF !important;
-  padding-left: 60px;
+  padding: 30px 0;
+}
+@media (max-width: 980px) {
+  .et_pb_testimonial {
+    padding-left: 60px;
+  }
 }
 .et_pb_testimonial::before {
   display: none !important;
