--- a/wp-content/themes/divi-ncruralcenter/sass/common/_typography.scss
+++ b/wp-content/themes/divi-ncruralcenter/sass/common/_typography.scss
@@ -22,7 +22,11 @@ h2.category-title {
 
 .et_pb_testimonial {
   background: $color-gray-light !important;
-  padding-left: 60px;
+  padding: 30px 0;
+
+  @media (max-width: 980px) {
+    padding-left: 60px;
+  }
 
   &::before {
     display: none !important;
